tests/broken/writ-unclosed-tag.stderr
error: Expecting the writ tag to be closed with `_}}`, `-}}`, or `}}`.
 --> tests/broken/writ-unclosed-tag.rs:4:28
  |
4 | #[oxiplate_inline = "{{ foo"]
  |                            ^
